<resources>
    <string name="app_name">FitRecipes</string>
    <string name="hint_enter_phone_number">Enter Phone Number</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_upload_profile">Upload Profile</string>

    <string name="logout"><u>Logout</u></string>
    <string name="my_recipes"><u>My Recipes</u></string>

    <string name="view_all_recipes"><u>View All Recipes:</u></string>
    <!--<string-array name="array_name">-->

    <string-array name="array_units">
        <item>Gm</item>
        <item>Kg</item>
        <item>Cup</item>
        <item>Litre</item>
        <item>Tsp</item>
        <item>Tbsp</item>
    </string-array>

  <!--  </string-array>

    <string-array name="array_name_serving_people">
        <item>Select</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>

    <string-array name="array_name_cooking_time">
        <item>Select</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>35 minutes</item>
        <item>40 minutes</item>
        <item>45 minutes</item>
        <item>50 minutes</item>

    </string-array>
-->
    <string name="lorem"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit mauris nunc, in pellentesque enim elementum eu. Mauris sodales eleifend lacus vitae vehicula. Aliquam ac enim eu turpis maximus sodales porttitor sed ante. Ut id tortor mauris. Suspendisse at libero lorem. Donec sagittis justo euismod enim sagittis blandit. Mauris egestas sit amet mi eget vehicula. Cras sit amet eros sed massa vestibulum suscipit id nec velit. Sed sollicitudin, nunc eu lobortis molestie, dui neque tempor erat, in laoreet dolor leo a orci. Donec elementum erat ut enim ultrices, non aliquam turpis maximus. Integer pretium non arcu ornare posuere. Phasellus ut nulla cursus, vehicula lorem quis, interdum mi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent augue tellus, blandit quis molestie ac, cursus vitae ipsum. Fusce quis elit vel arcu sollicitudin mollis ut non nisi. Quisque enim nisl, tincidunt vitae metus eget, semper tempus tellus.

Duis venenatis mauris dui, a fringilla metus pulvinar in. Duis laoreet libero non consectetur finibus. Ut nec rhoncus est, id suscipit libero. Integer bibendum dolor id lacinia consequat. Cras feugiat nulla at nunc sagittis, vitae commodo dui dictum. In hac habitasse platea dictumst. Donec suscipit vulputate venenatis. Etiam porttitor metus a dolor pretium fermentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas facilisis lectus sit amet nisl vehicula, id euismod lacus fringilla. Morbi viverra lectus non orci cursus ornare. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.

Phasellus eu tempor nibh. Nulla facilisi. Donec nec cursus dui, vitae ultrices magna. Curabitur eget tristique ipsum. Curabitur pellentesque, nulla quis rhoncus tempus, arcu nunc commodo ante, nec ultrices diam nisl et risus. In eu dictum felis. Donec lacinia turpis hendrerit orci molestie, vel luctus mauris finibus. Etiam porta lectus nec neque rhoncus vestibulum. Duis eget hendrerit est, cursus euismod lorem. Phasellus pharetra, dolor non sagittis aliquet, urna urna lobortis nisl, in fermentum lorem erat quis risus. Aenean ligula dui, sodales in dictum vel, imperdiet ac nulla. Etiam sapien nulla, aliquam at venenatis id, gravida sed ligula. Quisque non tempor est. Morbi a orci sed massa accumsan tempor. Maecenas vel est pulvinar, finibus mi eu, viverra mi.

Mauris vel ipsum metus. Sed ac dolor faucibus, porttitor enim eu, dapibus orci. Integer vitae pretium eros. Proin posuere dictum nisi non hendrerit. Proin a nulla in odio tincidunt ultricies sit amet non mauris. Sed ac sem scelerisque, efficitur quam non, suscipit sem. Integer consequat lorem vel arcu suscipit, nec vehicula libero scelerisque. Phasellus quis venenatis ipsum. Nunc vitae molestie lorem. Aenean pharetra malesuada libero ut lobortis. Sed finibus, nibh aliquet sollicitudin egestas, orci nibh sodales elit, sit amet volutpat erat turpis quis erat. Vivamus sagittis blandit risus, ac convallis libero porta eget. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla venenatis diam ac pharetra fermentum.

Suspendisse et maximus tellus. Cras sagittis eu lacus ac ultrices. Aliquam egestas laoreet erat, id lobortis diam tincidunt et. In eleifend, nunc ac facilisis aliquam, magna augue dictum dolor, fermentum dapibus nisl turpis eu risus. Vivamus lacinia arcu vitae lacus sagittis laoreet. Donec vitae gravida mauris. Mauris id dolor nec velit viverra molestie. </string>


</resources>