<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/sign_up_FullName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:autofillHints="@string/hint_first_name"
                    android:background="@drawable/edit_text_without_stroke"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/_14sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/hint_first_name"
                    android:inputType="text"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_12sdp"
                    android:drawableLeft="@drawable/ic_user"
                    android:paddingLeft="30dp"
                    android:paddingRight="0dp" />

                <EditText
                    android:id="@+id/sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:autofillHints="@string/hint_email_address"
                    android:background="@drawable/edit_text_without_stroke"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_12sdp"
                    android:drawableLeft="@drawable/ic_email"
                    android:paddingLeft="30dp"
                    android:paddingRight="0dp" />

                <EditText
                    android:id="@+id/sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:autofillHints="@string/hint_enter_password"
                    android:background="@drawable/edit_text_without_stroke"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/hint_enter_password"
                    android:inputType="textPassword"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_12sdp" />

                <EditText
                    android:id="@+id/sign_up_cPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:autofillHints="@string/hint_confirm_password"
                    android:background="@drawable/edit_text_without_stroke"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="30dp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_12sdp"
                    android:drawableLeft="@drawable/ic_lock"
                    android:paddingLeft="30dp"
                    android:paddingRight="@dimen/_5sdp" />

                <EditText
                    android:id="@+id/sign_up_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:autofillHints="@string/hint_enter_phone_number"
                    android:background="@drawable/edit_text_without_stroke"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:drawablePadding="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/hint_enter_phone_number"
                    android:inputType="phone"
                    android:paddingStart="30dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_12sdp"
                    android:drawableLeft="@drawable/ic_baseline_phone_24"
                    android:paddingLeft="30dp"
                    android:paddingRight="15dp" />

                <EditText
                    android:id="@+id/sign_up_question"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:autofillHints="Enter Address"
                    android:background="@drawable/edit_text_without_stroke"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Enter Security Question"
                    android:paddingStart="30dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_12sdp"
                    android:drawableLeft="@drawable/ic_lock"
                    android:paddingLeft="30dp"
                    android:paddingRight="15dp" />

  <EditText
                    android:id="@+id/sign_up_ans"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:autofillHints="Enter Address"
                    android:background="@drawable/edit_text_without_stroke"
                    android:drawableStart="@drawable/ic_placeholder"
                    android:drawablePadding="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Enter Security Answer"
                    android:paddingStart="30dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/black"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="@dimen/_12sdp"
                    android:drawableLeft="@drawable/ic_placeholder"
                    android:paddingLeft="30dp"
                    android:paddingRight="15dp" />






                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:backgroundTint="@color/red"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="@dimen/_8sdp"
                    android:text="Sign Up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.ButtonRounded" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_32sdp"
                    android:gravity="bottom"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="end"
                        android:text="Already have an account?"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tv_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="0.7"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Signup"
                        android:textColor="@color/purple_700"
                        android:textSize="@dimen/_12sdp"
                        tools:layout_editor_absoluteX="318dp"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@android:color/transparent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/sign_up_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onBackPressed"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="Signup"
            app:titleTextColor="@color/black" />

    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>